spacing fix

--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1605,7 +1605,7 @@ div#de_column1 {
 }
 
 div#cardpic {
-    height: 300px;
+    height: 260px;
     margin: 10px;
     width: 200px;
     border: 1px solid white;
@@ -1620,6 +1620,7 @@ div#cardinfo {
 
 div#cardfilter {
     width: 100%;
+    display: none;
 }
 
 div#de_column2 {
@@ -1631,14 +1632,16 @@ div#de_column2 {
 div#de_searchresults {
     height: 461px;
     overflow-y: scroll;
-    width: 228px;
+    width: 220px;
     border: 1px solid white;
 }
 
-div#de_maincolumn {}
+div#de_maincolumn {
+    margin-top: 10px;
+}
 
 div#searchresult {
-    width: 180px;
+    width: 190px;
     height: 430px;
 }
 
